--- a/server/files/usr/local/ec2onrails/templates/common.erb
+++ b/server/files/usr/local/ec2onrails/templates/common.erb
@@ -5,9 +5,9 @@ ServerSignature Off
   AllowOverride None
 </Directory>
  
-DocumentRoot <%= @application_path %>/current/public
+DocumentRoot <%= application_path %>/current/public
  
-<Directory "<%= @application_path %>/current/public">
+<Directory "<%= application_path %>/current/public">
   Options FollowSymLinks
   AllowOverride None
   Order allow,deny
@@ -34,7 +34,7 @@ RewriteRule ^([^.]+)$ $1.html [QSA]
      
 # Redirect all non-static requests to cluster
 RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
-RewriteRule ^/(.*)$ balancer://mongrel_cluster_<%= @application_name %>%{REQUEST_URI} [P,QSA,L]
+RewriteRule ^/(.*)$ balancer://mongrel_cluster_<%= name %>%{REQUEST_URI} [P,QSA,L]
       
 # Deflate
 AddOutputFilterByType DEFLATE text/html text/plain text/xml application/xml application/xhtml+xml text/javascript text/css
