--- a/server/files/usr/local/ec2onrails/templates/proxy_cluster.conf.erb
+++ b/server/files/usr/local/ec2onrails/templates/proxy_cluster.conf.erb
@@ -2,8 +2,7 @@
   
 <Proxy balancer://mongrel_cluster_<%= name %> >
   <% ports.each do |port| %>
-    BalancerMember http://127.0.0.1:<%= port %>
-  <% end %>
+  BalancerMember http://127.0.0.1:<%= port %><% end %>
 
   SetEnv force-proxy-request-1.0    1
   SetEnv proxy-nokeepalive          1
