--- a/server/files/usr/local/ec2onrails/templates/proxy_frontend.conf.erb
+++ b/server/files/usr/local/ec2onrails/templates/proxy_frontend.conf.erb
@@ -1,7 +1,7 @@
 # Based on http://blog.codahale.com/2006/06/19/time-for-a-grown-up-server-rails-mongrel-apache-capistrano-and-you/
   
-Listen <%= BALANCE_MANAGER_START_PORT + application_index %>
-<VirtualHost *:<%= BALANCE_MANAGER_START_PORT + application_index %>>
+Listen <%= BALANCE_MANAGER_START_PORT + application_count %>
+<VirtualHost *:<%= BALANCE_MANAGER_START_PORT + application_count %>>
   <Location />
     SetHandler balancer-manager
     Deny from all
