now creates monitrc file

--- a/server/files/usr/local/ec2onrails/templates/mongrel_cluster.yml.erb
+++ b/server/files/usr/local/ec2onrails/templates/mongrel_cluster.yml.erb
@@ -1,6 +1,6 @@
 --- 
 cwd: /mnt/<%= name %>/current
-port: "<%= start_port %>"
+port: "<%= @start_port %>"
 environment: <%= rails_env %>
 pid_file: log/mongrel.pid
 servers: <%= MONGREL_INSTANCES %> 
