--- a/server/files/usr/local/ec2onrails/templates/proxy_cluster.conf.erb
+++ b/server/files/usr/local/ec2onrails/templates/proxy_cluster.conf.erb
@@ -1,7 +1,7 @@
 # Based on http://blog.codahale.com/2006/06/19/time-for-a-grown-up-server-rails-mongrel-apache-capistrano-and-you/
   
 <Proxy balancer://mongrel_cluster_<%= name %> >
-  <% ports.each do |port| %>
+  <% @ports.each do |port| %>
   BalancerMember http://127.0.0.1:<%= port %><% end %>
 
   SetEnv force-proxy-request-1.0    1
